added models to models.py

--- a/microdonate/templates/microdonate/google.html
+++ b/microdonate/templates/microdonate/google.html
@@ -15,3 +15,10 @@
 
   </body>
 </html>
+
+<!-- create google login when pull form form
+another from google login: pull more info from tutor fields 
+pull those fields for models
+call both of those forms for views -->
+
+<!-- catherine had a model in a model with 1-to-1 -->
