--- a/microdonate/templates/microdonate/google.html
+++ b/microdonate/templates/microdonate/google.html
@@ -7,9 +7,7 @@
   <h1>My Google Login Project</h1>
   {% if user.is_authenticated %}
   <p>Welcome, {{ user.username }} !</p>
-  <form action="{% url 'microdonate:usercheck' %}" method="GET" class = "form">
-    <button type="submit" class="btn btn-primary"> Go to Dashboard </button>
-  </form>
+  <a href="{% url 'microdonate:usercheck' %}">Go to Dashboard</a>
   {% else %}
   <h1>Google Login</h1>
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
