--- a/microdonate/templates/microdonate/google.html
+++ b/microdonate/templates/microdonate/google.html
@@ -7,7 +7,7 @@
   <h1>My Google Login Project</h1>
   {% if user.is_authenticated %}
   <p>Welcome, {{ user.username }} !</p>
-  <a href="{% url 'microdonate:usercheck' %}">Go to Dashboard</a>
+  <a href="{% url 'usercheck' %}">Go to Dashboard</a>
   {% else %}
   <h1>Google Login</h1>
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
