--- a/microdonate/templates/microdonate/detailVol.html
+++ b/microdonate/templates/microdonate/detailVol.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        {{op.volunteer_name}}<br>
+        {{title}}<br>
     </head>
     {{op.description}}<br>
     <div class = "row">
