--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -5,7 +5,7 @@
     {{op.description}}<br>
     <div class="row">
         <div class="col">
-            <form action="{% url 'submitDonation' op.id}" method=POST>
+            <form action="{% url 'submitDonation' op.id %}" method=POST>
                 <h3> Donate Now! </h3>
                 Card Number:
                 <input type="text" id="card-number" name="card-number"><br>
