Added date to volunteer page

--- a/microdonate/templates/microdonate/detailVol.html
+++ b/microdonate/templates/microdonate/detailVol.html
@@ -111,7 +111,7 @@
 </nav>
 <div class="bg">
   <h2>{{title}}</h2>
-  Date: To be implemented
+  {{op.date}}
   <h6>{{op.description}}</h6>
 </div>
 <div class="container">
