Added "how it works" page

--- a/microdonate/templates/microdonate/dash.html
+++ b/microdonate/templates/microdonate/dash.html
@@ -102,7 +102,7 @@
   </button>
   <div class="collapse navbar-collapse" id="microdonate-navbar">
     <div class="navbar-nav ml-auto">
-      <a class="nav-link active" href="#">How does it work?</a>
+      <a class="nav-link active" href="{% url 'about' %}">How does it work?</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
