Added base PayPal integration, adjusted hard code for profile, styling for donation page

--- a/microdonate/templates/microdonate/profile.html
+++ b/microdonate/templates/microdonate/profile.html
@@ -153,9 +153,9 @@
                 style="height: 4em; width: 100%; border-radius: 20px"
               >
                 <div
-                  class="progress-bar"
+                  class="progress-bar progress-bar-striped progress-bar-animated"
                   role="progressbar"
-                  style="width: 50%; background-color: #7dcfb6"
+                  style="width: {{ percent }}%; background-color: #7dcfb6"
                   aria-valuenow="{{ percent }}"
                   aria-valuemin="0"
                   aria-valuemax="100"
