--- a/microdonate/templates/microdonate/leaderboard.html
+++ b/microdonate/templates/microdonate/leaderboard.html
@@ -149,7 +149,7 @@
     {% else %}
         <li class="list-group-item">
             <img
-        src="{{ user.socialaccount_set.all.0.get_avatar_url }}"
+        src="{{ Profile.account.socialaccount_set.all.0.get_avatar_url }}"
         style="border-radius: 50px"
             />
             {{Profile.user_name}}       {{Profile.xp}}
