--- a/microdonate/templates/microdonate/comments.html
+++ b/microdonate/templates/microdonate/comments.html
@@ -94,6 +94,8 @@
     <div class="navbar-nav ml-auto">
       <a class="nav-link active" href="#">How does it work?</a>
       <div class="nav-link active">|</div>
+      <a class="nav-link active" href="{% url 'leaderboard' %}">Leaderboard</a>
+      <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
       <span class="nav-link active">Welcome {{user.username}}!</span>
