--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -49,7 +49,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
         $.ajax({
             type: 'GET',
             url: "{% url 'update_xp' %}",
-            data: {donation: amount, user: "{{user.username}}"},
+            data: {donation: amount, user: "{{user.username}}",opp: "{{op.donate_name}}"},
             success: function (response) {
               location.href = '/dash';
             },
